height fix on mobile

--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -3,7 +3,7 @@
 }
 
 .landing-container{ 
-    height: 100vh;
+    min-height: -webkit-fill-available;
     width: 100vw;
     display: flex;
     flex-direction: column;
